--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fontsource-variable/fredoka": "^5.2.8",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
@@ -18,7 +19,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.89.2",
+    "sass-loader": "^16.0.5"
   },
   "eslintConfig": {
     "root": true,
