--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fontsource-variable/fredoka": "^5.2.8",
+    "appwrite": "^18.1.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.5.1"
