--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "searchw",
   "version": "0.1.0",
   "private": true,
-  
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -13,6 +12,7 @@
     "appwrite": "^18.1.1",
     "core-js": "^3.8.3",
     "dotenv": "^17.2.1",
+    "pinia": "^3.0.3",
     "vue": "^3.2.13",
     "vue-router": "^4.5.1",
     "vue3-toastify": "^0.2.8"
