--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "@fontsource-variable/fredoka": "^5.2.8",
     "appwrite": "^18.1.1",
+    "autoprefixer": "^10",
     "core-js": "^3.8.3",
     "dotenv": "^17.2.1",
     "pinia": "^3.0.3",
+    "postcss": "^8",
+    "tailwindcss": "^3",
     "vue": "^3.2.13",
     "vue-router": "^4.5.1",
     "vue3-toastify": "^0.2.8"
@@ -26,7 +29,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.89.2",
-    "sass-loader": "^16.0.5"
+    "sass-loader": "^16.0.5",
+    "vue-cli-plugin-tailwind": "~3.0.0"
   },
   "eslintConfig": {
     "root": true,
